<resources>
    <string name="app_name">Patrolling App</string>

    <string name="welcome">Welcome to the Forest Patrolling App!</string>

    <string name="title_activity_maps">Patrolling App</string>

    <string name="drawer_open">Drawer Open</string>

    <string name="drawer_close">Drawer Close</string>
    <string name="assets">Assets</string>
    <string name="check_imu_data">Check IMU Data</string>
    <string name="tracking">Tracking</string>
    <string name="tiger_descript">Tiger in wild</string>


    <string name="display_assets">Display all assets</string>
    <string name="check_realtime_imu_data_of_phone">Check realtime IMU Data of Phone</string>
    <string name="click_button_to_start">click button to start</string>
    <string name="begin_tracking_module">Begin Tracking module</string>
    <string name="tiger_watching">tiger_watching</string>
    <string name="latitude_longitude">Latitude</string>
    <string name="save">Save</string>
    <string name="grey_person">grey person</string>
    <string name="name">Name</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="flower">flower</string>
    <string name="assets_list">Assets List</string>

    <string-array name="category_array">
        <item>Mammals</item>
        <item>Birds</item>
        <item>Reptiles</item>
        <item>Echinoderms</item>
        <item>Molluscs</item>
        <item>Corals</item>
    </string-array>
</resources>
