<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="25dp"
        android:fontFamily=""
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        android:textStyle="bold"
        android:translationZ="2dp" />

    <Button
        android:id="@+id/assetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imuButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/display_assets"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="271dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="42dp"
        android:contentDescription="@string/tiger_watching"
        app:srcCompat="@drawable/tiger" />

    <Button
        android:id="@+id/imuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/trackButton"
        android:layout_marginBottom="17dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:text="@string/check_realtime_imu_data_of_phone"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/trackButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:background="@color/colorAccent"
        android:hint="@string/click_button_to_start"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:text="@string/begin_tracking_module"
        android:textColor="@color/white" />

</RelativeLayout>